base/monolith/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myreadings-app
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app.kubernetes.io/name: myreadings-app
    app.kubernetes.io/part-of: myreadings
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: myreadings-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myreadings-app
        app.kubernetes.io/part-of: myreadings
    spec:
      containers:
        - name: myreadings-app
          image: quay.io/too-common-name/myreadings-app:latest
          ports:
            - containerPort: 8081
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8081
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 15
          startupProbe:
            httpGet:
              path: /q/health/started
              port: 8081
            failureThreshold: 20
            periodSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 512Mi
