base/monolith/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myreadings-app
  labels:
    app.kubernetes.io/name: myreadings-app
    app.kubernetes.io/part-of: myreadings
spec:
  selector:
    app.kubernetes.io/name: myreadings-app
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
